--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name </div>
-                                <div class="sub-title">Krithika K</div>
+                                <div class="sub-title">Krithika J</div>
                             </div>
                         </div>
                         <div class="row">
