--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I am <span class="typing-2"></span></div>
-                    <p>Hi everyone! I'm a second-year engineering student specializing in B.Sc. Psychology.  I'm passionate about Creativity and its potential to solve real-world problems.  Beyond my academic focus, I also have strong skills in Content Creator, Design, and Basic Front-End Development.  To gain practical experience, I've undertaken several Lectured and even freelanced using these skills.  I'm always eager to learn and collaborate, so feel free to connect if you have any interesting projects or share my passion for my work!</p>
+                    <p>Hi everyone! I'm a First-year  student specializing in B.Sc. Psychology.  I'm passionate about Creativity and its potential to solve real-world problems.  Beyond my academic focus, I also have strong skills in Content Creator, Design, and Basic Front-End Development.  To gain practical experience, I've undertaken several Lectured and even freelanced using these skills.  I'm always eager to learn and collaborate, so feel free to connect if you have any interesting projects or share my passion for my work!</p>
                 </div>
             </div>
         </div>
